[tool.poetry]
name = "autogen"
version = "0.1.0"
description = "Multi-Agent Conversation"
authors = ["ragy abraham <ragy@rna.digital>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "*"
diskcache = "*"
termcolor = "*"
flaml = "*"
python-dotenv = "*"
python-socketio = "*"
numpy = "1.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
