[tool.poetry]
name = "autogen"
version = "0.1.0"
description = "Multi-Agent Conversation"
authors = ["ragy abraham <ragy@rna.digital>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "*"
diskcache = "*"
termcolor = "*"
flaml = "*"
python-dotenv = "*"
python-socketio = { git = "https://github.com/miguelgrinberg/python-socketio.git", branch = "main" }
numpy = "1.25.0"
pytest = "^7.4.2"
tiktoken = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
