[tool.poetry]
name = "autogen"
version = "0.1.0"
description = "Multi-Agent Conversation"
authors = ["ragy abraham <ragy@rna.digital>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "*"
diskcache = "*"
termcolor = "*"
flaml = "*"
python-dotenv = "*"
python-socketio = "^5.10.0"
numpy = "1.25.0"
pytest = "^7.4.2"
tiktoken = "^0.5.1"
tenacity = "^8.2.3"
bs4 = "^0.0.1"
arxiv = "^2.0.0"
wikipedia = "^1.4.0"
feedparser = "^6.0.10"
docker = "^6.1.3"
redis = "<5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
